--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-pure-render",
   "version": "1.0.2",
   "description": "A function, a component and a mixin for React pure rendering",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/gaearon/react-pure-render.git"
